--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:integration": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPatterns=__tests__/integration-tests --runInBand",
     "lint": "eslint .",
     "prettier": "prettier --write .",
-    "format": "npm run prettier && npm run lint"
+    "format": "npm run prettier && npm run lint",
+    "prepare": "husky install"
   },
   "author": "Luka Žderić",
   "license": "ISC",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^9.35.0",
+    "husky": "^9.1.7",
     "jest": "^30.1.3",
     "prettier": "^3.6.2"
   },
